Remove BOOKIE_MEM and BOOKIE_GC